# EXMPL

./: README.md  pyproject.toml  test_dummy.py
.github/workflows/: actions.yml  github-actions-demo.yml  run_test.yml  run_tests.yml
Tests/: conftest.py  simpl_test.py  test_login_main_page.py
pages/: locators.py
