[tool.poetry]
name = "actionexmpl"
version = "0.1.0"
description = ""
authors = ["KatyaMy <20FamGam20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.6.0"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

